--- a/html/invoice-edit.html
+++ b/html/invoice-edit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="lt">
-<script src="appform.js" defer></script>
+<script src="appedit.js" defer></script>
 <link rel="stylesheet" href="style.css">
 
 <head>
@@ -15,7 +15,7 @@
         <Button>
             <p><a href="/invoice-list">Ivoice sąrašas</a></p>
         </Button>
-        <button id="fetchData">Gauti sąskaitą</button>
+        <!-- <button id="fetchData">Gauti sąskaitą</button> -->
         <button id="saveInvoice" style="display: none;">Išsaugoti sąskaitą</button>
 
     </div>
