--- a/html/invoice-edit.html
+++ b/html/invoice-edit.html
@@ -15,81 +15,90 @@
         <Button>
             <p><a href="/invoice-list">Ivoice sąrašas</a></p>
         </Button>
-        <!-- <button id="fetchData">Gauti sąskaitą</button> -->
+        <button id="updateData">Atnaujinti</button>
         <button id="saveInvoice" style="display: none;">Išsaugoti sąskaitą</button>
 
     </div>
 
 
-    <div id="app" style="display: none">
-        <header>
-            <div class="topHeader">
-                <h3><span class="SaskaitosNr"></span></h3>
-                <div class="SaskaitosData">
-                    <h4>Dokumento data:&nbsp;</h4>
-                </div>
-            </div>
-            <section class="headerSection">
-                <div class="buyer">
-                    <h4>Prikėjas:</h4>
-                </div>
-                <div class="seller">
-                    <h4>Pardavėjas:</h4>
-                </div>
-            </section>
+    <div id="viewModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
 
-            <div class="line">____________________________________________________________________________________
-            </div>
-        </header>
-        <main>
-            <section class="items">
-                <section class="TableColumns">
-                    <div class="Numeris">Nr.</div>
-                    <div class="Preke"> Prekė</div>
-                    <div class="Kaina">Kaina, &#8364;</div>
-                    <div class="Kiekis"> Kiekis</div>
-                    <div class="Nuolaida">Nuolaida</div>
-                    <div class="BePVM">Suma</div>
-                    <div class="SuPVM">Su PVM</div>
-                </section>
+            <div id="app">
+                <header>
+                    <div class="topHeader">
+                        <h3><span class="SaskaitosNr"></span></h3>
+                        <div class="SaskaitosData">
+                            <h4>Dokumento data:&nbsp;</h4>
+                        </div>
+                    </div>
+                    <section class="headerSection">
+                        <div class="buyer">
+                            <h4>Prikėjas:</h4>
+                        </div>
+                        <div class="seller">
+                            <h4>Pardavėjas:</h4>
+                        </div>
+                    </section>
 
-            </section>
-        </main>
-        <footer>
+                    <div class="line">
+                        ____________________________________________________________________________________
+                    </div>
+                </header>
+                <main>
+                    <section class="items">
+                        <section class="TableColumns">
+                            <div class="Numeris">Nr.</div>
+                            <div class="Preke"> Prekė</div>
+                            <div class="Kaina">Kaina, &#8364;</div>
+                            <div class="Kiekis"> Kiekis</div>
+                            <div class="Nuolaida">Nuolaida</div>
+                            <div class="BePVM">Suma</div>
+                            <div class="SuPVM">Su PVM</div>
+                        </section>
+
+                    </section>
+                </main>
+                <footer>
 
 
-            <div class="sumosContainer">
-                <div class="sumos">
-                    <div class="shippingPrice">Siuntimo kaina: </div>
-                    <div class="prekiuSumaText">Prekių suma:</div>
-                    <div class="prekiuSumabePVMText">Iš viso suma be PVM:</div>
-                    <div class="prekiuSumaPVMText">PVM suma (21%): </div>
-                    <div class="prekiuSumaVisasText">Iš viso suma su PVM:</div>
-                </div>
-                <div class="totalPrice"></div>
+                    <div class="sumosContainer">
+                        <div class="sumos">
+                            <div class="shippingPrice">Siuntimo kaina: </div>
+                            <div class="prekiuSumaText">Prekių suma:</div>
+                            <div class="prekiuSumabePVMText">Iš viso suma be PVM:</div>
+                            <div class="prekiuSumaPVMText">PVM suma (21%): </div>
+                            <div class="prekiuSumaVisasText">Iš viso suma su PVM:</div>
+                        </div>
+                        <div class="totalPrice"></div>
+                    </div>
+                    <div class="pastabaToText">
+                        <div class="pastaba1">PASTABA:</div>
+                        <div class="pastaba2"><b>Iš viso suma su PVM:</b></div>
+                    </div>
+                    <div class="dokTerminas">
+                        Apmokėjimo terminas iki:&nbsp;
+                    </div>
+                    <div class="Isdave">
+                        <div>
+                            <h4>Prekes išdavė:</h4>
+                        </div>
+                        <div>_________________________________________</div>
+                        <div>(pareigos, vardas, pavardė, parašas)</div>
+                    </div>
+                    <div class="Priime">
+                        <div>
+                            <h4>Prekes priėmė:</h4>
+                        </div>
+                        <div>_________________________________________</div>
+                        <div>(pareigos, vardas, pavardė, parašas)</div>
+                    </div>
+                </footer>
             </div>
-            <div class="pastabaToText">
-                <div class="pastaba1">PASTABA:</div>
-                <div class="pastaba2"><b>Iš viso suma su PVM:</b></div>
-            </div>
-            <div class="dokTerminas">
-                Apmokėjimo terminas iki:&nbsp;
-            </div>
-            <div class="Isdave">
-                <div>
-                    <h4>Prekes išdavė:</h4>
-                </div>
-                <div>_________________________________________</div>
-                <div>(pareigos, vardas, pavardė, parašas)</div>
-            </div>
-            <div class="Priime">
-                <div>
-                    <h4>Prekes priėmė:</h4>
-                </div>
-                <div>_________________________________________</div>
-                <div>(pareigos, vardas, pavardė, parašas)</div>
-            </div>
-        </footer>
+
+
+        </div>
     </div>
 
 
